--- a/src/test.css
+++ b/src/test.css
@@ -1,36 +1,86 @@
-.container {
-    max-width: 400px;
-    margin: 10vh auto 0 auto;
-    box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
+
+  
+*{
+    margin:0;
+    padding:0;
 }
-.button {
-    border: 0.5px solid #999;
-    line-height: 100px;
-    text-align: center;
-    font-size: 25px;
-    cursor: pointer;
-    background-color: orange;
+.wrapper{
+    width: 100%;
+    background-color: rgb(45, 45, 54);
+    padding: 7% 0 7% 0 ;
 }
-.buttons > div {
-    border-top: 1px solid #999;
-    border-right: 1px solid#999;
+
+.calc{
+    width: 25%;
+    border-radius: 5%;
+    margin:auto;
+    border: 1px solid rgb(77, 74, 74);
+    background-color: rgb(121, 116, 116);
+    overflow: hidden;
+    padding: 1px;
 }
-.buttons {
-    display: grid;
-    border-bottom: 1px solid #999;
-    border-left: 1px solid#999;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 80px;
+.sideicon {
+    background-color: rgb(45, 45, 54);
+    border-top-left-radius: 17px;
+    border-top-right-radius: 17px;
+    border-bottom: none;
+    
 }
-#display {
+.sideicon ul{
+    margin-left: 10px;
+}
+
+.sideicon ul li{
+    display:inline-block;
+    color:white;
+    
+    
+}
+
+.sideicon ul li input{
+    width: 10px;
+    height:10px;
+    background-color: rgb(128, 128, 133);
+    border-radius: 50%;
+}
+
+
+
+.inp input{
+    width:97%;
+    font-size:15vh;
+    height: 100px;
+    background-color: rgb(45, 45, 54);
+    color: white;
     text-align: right;
-    height: 70px;
-    line-height: 70px;
-    padding: 16px 8px;
-    font-size: 25px;
+    padding: 2px;
 }
-.main{
-width : 50px;
-margin-right: 0px;
+
+
+
+.row{
+    width: 100%;
+}
+.coloum{
+    width:23.5%;
+    border-right:2px solid rgb(45, 45, 54);
+    border-bottom:2px solid rgb(45, 45, 54);
+    /*margin: -1px;*/
+    display: inline-block;
+    height: 50px;
+    text-align: center;
+    color:white;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 15px;
+}
+
+.c{
+    background-color: rgb(254, 159, 11);;
+}
+
+.t{
+    width: 48.2%;
+    border-top: 2px solid rgb(45, 45, 54);
 }
   
